--- a/index.html
+++ b/index.html
@@ -988,11 +988,11 @@ function initModalEvents() {
 
   if (openModalBtn) {
     if (isLocal) {
-      // Sembunyikan tombol saat di lokal
-      openModalBtn.style.display = "none";
-    } else {
-      // Tampilkan tombol jika bukan di lokal
+      // Tampilkan tombol saat di lokal
       openModalBtn.style.display = "block";
+    } else {
+      // Sembunyikan tombol jika bukan di lokal
+      openModalBtn.style.display = "none";
     }
   }
 
